--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>My First Page</title>
     </head>
     <body>
-        <h1>DevOps Training 2022 v1 2</h1>
+        <h1>DevOps Training 2022 v1</h1>
     </body>
 
 </html>
